# nox

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  temp.txt  ubuntu.Dockerfile
.github/workflows/: action.yml  build.yml
assembly/: README.md  darwin-aarch64.s  darwin-x86_64.s  x86_64.s
docker/: README.md  run.bat  run.sh  ubuntu.Dockerfile
examples/: arithmetic.nox  assignment.nox  check-error.nox  conditions.nox  fun-decl.nox  function-call.nox  identifier.nox  if-else-stmt.nox  if-stmt.nox  lex-error.nox  parse-error.nox  program.nox  string.nox  structs.nox  while-loop.nox
fuzzing/: CMakeLists.txt  main.c
fuzzing/corpus/: invalid0.nox  program.nox  valid0.nox  valid1.nox  valid2.nox  while-loop.nox
presentation/: Nox - Introduction.pptx
references/: Nox - Introduction.pptx  aarch64-assembly.md  github-actions.md  google-test.md
src/: allocator.c  allocator.h  args.c  args.h  assert.h  error.c  error.h  file.c  file.h  lib.c  lib.h  location.h  logger.c  logger.h  main.c  memory.c  memory.h  preamble.h  str.c  str.h  types.h  utf8.c  utf8.h
src/code_generator/: disassembler.c  disassembler.h  generator.c  generator.h
src/interpreter/: interpreter.c  interpreter.h
src/jit_compiler/: aarch64.h  jit.c  jit.h  x86_64.h
src/lexer/: lexer.c  lexer.h  token.c  token.h
src/os/: darwin_memory.c  memory.c  memory.h  posix_memory.c  win32_memory.c
src/parser/: ast_printer.c  ast_printer.h  info.md  node.c  node.h  parser.c  parser.h  tree.c  tree.h  tree_writer.c  tree_writer.h  visitor.c  visitor.h
src/transpiler/: c_transpiler.c  c_transpiler.h
src/type_checker/: checker.c  checker.h
tests/: CMakeLists.txt  allocator.c  arithmetic.cpp  checker.cpp  functions.cpp  if-stmt.cpp  lexer.cpp  logic.cpp  main.cpp  parser.cpp  struct.cpp  while-stmt.cpp
